Update index y base html

--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -131,6 +131,8 @@
       <script>
         new Vue({
           el: '#app_ht',
+          drawer: null,
+          dial_reg: false,
           vuetify: new Vuetify(),
         })
       </script>
