--- a/app/Templates/dashboard.html
+++ b/app/Templates/dashboard.html
@@ -4,10 +4,9 @@
 {% block tit_bar %} DASHBOARD {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
-{% block btn_dashboard %} DashBoard {% endblock %}
-{% block btn_about %} Acerca de {% endblock %}
-{% block btn_exit %} Salir {% endblock %}
-
+{% block btn_dashboard %}Dasboard{% endblock %}
+{% block btn_about %}Acerda de{% endblock %}
+{% block btn_exit %}Salir{% endblock %}
 {% block contenido_1 %}
 <v-card class="d-flex align-center pa-2" flat wwidth = "100px" height="250px" elevation=15 style="block-size: auto;">
     <v-card-title>Control de administracion</v-card-title>
