Update Sabado multiples

--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -25,7 +25,7 @@
           </v-card-text>
           <v-toolbar dense floating>
             <v-text-field name="fecha_busqueda" type="date" label="Fecha Busqueda" id="fecha_busqueda" title="Buscar Disponibilidad" prepend-icon="mdi-magnify" hide-details clearable></v-text-field>
-            <v-btn icon title="Buscar">
+            <v-btn onclick=search() icon title="Buscar">
               <v-icon>mdi-dots-vertical</v-icon>
             </v-btn>
           </v-toolbar>
