--- a/app/Templates/adm/comentarios.html
+++ b/app/Templates/adm/comentarios.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titulo %} Administrador de comentarios {% endblock %}
+{% block titulo %} Centara Grand Hotel - Administrador de comentarios {% endblock %}
 {% block tit_bar %} Administrar comentarios {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
