--- a/app/Templates/adm/reservas.html
+++ b/app/Templates/adm/reservas.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titulo %} Administrador de reservas {% endblock %}
+{% block titulo %} Centara Grand Hotel - Administrador de reservas {% endblock %}
 {% block tit_bar %} Administrar reservas {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
@@ -61,7 +61,6 @@
             <v-divider></v-divider>
         </v-row>
 </template> 
-
 
 {% endblock %}
 {% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
