--- a/app/Templates/dashboard.html
+++ b/app/Templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titulo %} Centara Grand Hotal Dashboard {% endblock %}
+{% block titulo %} DashBoard {% endblock %}
 {% block tit_bar %} DASHBOARD {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
