--- a/app/Templates/adm/habitaciones.html
+++ b/app/Templates/adm/habitaciones.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titulo %} Centara Grand Hotel - Administrador de habitaciones {% endblock %}
+{% block titulo %} Admin habitaciones {% endblock %}
 {% block tit_bar %} Administrar habitaciones {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
@@ -67,7 +67,12 @@
                 <v-divider></v-divider>
                 <v-card-title style="padding: 2px 10px;">{{room[1]}}</v-card-title>
                 <v-divider></v-divider>
-            
+
+                <!--Parametros -->
+                <input id="id" type="hidden" value="{{room[0]}}">
+                <input id="table" type="hidden" value="room">
+                <!-- Fin parametros -->
+
                 <v-card-subtitle class="pb-0" style="padding: 2px 15px;">
                   Id: {{room[0]}}
                 </v-card-subtitle>
@@ -76,73 +81,9 @@
                   <div><b>Precio: </b>${{room[5]}}</div>
                   <div><b>Calificacion: </b>{{room[3]}}</div>
                   <div><b>Description: </b>{{room[2]}}</div>
-                </v-card-text>            
-                <v-card-actions  style="padding: 15px">
-                    <form style="margin: 10px 1px;">
-                        <template>
-                            <v-row justify="center">
-                              <v-dialog v-model="dialog_edit" persistent max-width="600px" >
-                                <template v-slot:activator="{ on, attrs }">
-                                    <v-btn color="green"dark text v-bind="attrs" v-on="on">Editar</v-btn>
-                                </template>
-                                <v-card>
-                                  <v-card-title>
-                                    <span class="text-h5">Datos</span>
-                                  </v-card-title>
-                                  <v-card-text>
-                                    <v-container>
-                                      <v-row>
-                                        <v-col cols="12">
-                                          <v-text-field id="name{{room[0]}}" label="Name*" required></v-text-field>
-                                        </v-col>
-                                        <v-col cols="12">
-                                          <v-text-field id="email{{room[0]}}" label="Email*" required ></v-text-field>
-                                        </v-col>
-                                        <v-col cols="12" sm="6">
-                                          <v-autocomplete
-                                            :items="['free', 'moderador', 'admin']"
-                                            label="Rol"
-                                            multiple
-                                            id="rol{{room[0]}}"
-                                          ></v-autocomplete>
-                                        </v-col>
-                                      </v-row>
-                                    </v-container>
-                                    <small>Edicion de usuarios {{room[0]}}</small>
-                                  </v-card-text>
-                                  <v-card-actions>
-                                    <v-spacer></v-spacer>
-                                    <v-btn color="red darken-1" text @click="dialog_edit = false" > Cerrar </v-btn>
-                                    <v-btn color="blue darken-1" text onclick=edit() @click="dialog_edit = false" > Guardar </v-btn>
-                                  </v-card-actions>
-                                </v-card>
-                              </v-dialog>
-                            </v-row>
-                        </template>
-                    </form>
-                    <form style="margin: 10px 15px;">
-                        <template>
-                            <v-row justify="center">
-                              <v-dialog v-model="dialog_delete" persistent max-width="290">
-                                    <template v-slot:activator="{ on, attrs }">
-                                      <v-btn color="red" dark text v-bind="attrs" v-on="on">Eliminar</v-btn>
-                                    </template>
-                                    <v-card>
-                                      <v-card-title class="text-h5"> Eliminar </v-card-title>
-                                      <v-card-text>¿Está seguro que desea eliminar el usuario?</v-card-text>
-                                      <v-card-actions>
-                                        <v-spacer></v-spacer>
-                                        <v-btn color="red darken-1" text @click="dialog_delete = false">Cancelar</v-btn>
-                                        <v-btn color="green darken-1" text onclick=eliminar()  @click="dialog_delete = false">Aceptar</v-btn>
-                                      </v-card-actions>
-                                    </v-card>
-                                </v-dialog>
-                            </v-row>
-                        </template>
-                    </form>
-                      <input type="hidden" id="id" value="{{room[0]}}">
-                      <input type="hidden" id="route" value="/adm/habitaciones/">
-                </v-card-actions>
+                </v-card-text>
+
+                <v-btn color="green"dark text  onclick= config({{room[0]}}) >Configurar</v-btn>
             </v-card>
         </v-col>
         {% endfor %}
