Se realizo la reserva

--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -169,7 +169,7 @@
         </v-col>
       </v-row>
       
-      <v-card-title>Reserva Tu Habitación</v-card-title>
+      <v-card-title>Reserva Tu Habitación</v-card-title> <!------------------------------>
         <v-card-text>
           <v-container class="grey lighten-5 body-2" fluid>
             <v-row class="mx-0" justify="space-around" no-gutters></v-row>     
