--- a/app/Templates/dashboard.html
+++ b/app/Templates/dashboard.html
@@ -6,6 +6,7 @@
 {% block btn_signin %} Registro {% endblock %}
 {% block btn_dashboard %}Dasboard{% endblock %}
 {% block btn_about %}Acerda de{% endblock %}
+{% block btn_reserva %} Has tu Reserva {% endblock %}
 {% block btn_exit %}Salir{% endblock %}
 {% block contenido_1 %}
 <v-container fluid>
