--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -7,6 +7,7 @@
 {% block btn_signin %} Registro {% endblock %}
 {% block btn_dashboard %} DashBoard {% endblock %}
 {% block btn_about %} Acerca de {% endblock %}
+{% block btn_reserva %} Has tu Reserva {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 
 {% block contenido_1 %}
