--- a/app/Templates/adm/users.html
+++ b/app/Templates/adm/users.html
@@ -6,6 +6,7 @@
 {% block btn_signin %} Registro {% endblock %}
 {% block btn_dashboard %} DashBoard {% endblock %}
 {% block btn_about %} Acerca de {% endblock %}
+{% block btn_reserva %} Has tu Reserva {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 
 {% block contenido_1 %}
@@ -23,6 +24,7 @@
                                         id="search"
                                         append-icon="mdi-magnify"
                                         label="Buscar usuarios"
+                                        clearable
                                     ></v-text-field>
                                 </v-col>
                                 <v-col class="text-h4 white--text font-weight-bold">
