--- a/app/Templates/usr_reservas.html
+++ b/app/Templates/usr_reservas.html
@@ -20,13 +20,7 @@
             <v-combobox
               name = "room_id"
               id = "room_id"
-              :items = "[
-                { text: 'Habitacion 1', value: 1},
-                { text: 'Habitacion 2', value: 2},
-                { text: 'Habitacion 4', value: 3},
-                { text: 'Habitacion 5', value: 4},
-                { text: 'Habitacion 6', value: 5},
-              ]"
+              :items = "{{rooms_list_av}}"
               label = "Seleciona tu Habitacion"
               clearable
               dense
@@ -49,7 +43,7 @@
             solo
             type="text"
             label="Detalles de la reserva"
-            id="res_descriptions"
+            id="descriptions"
             prepend-inner-icon="mdi-text"
             title="Digitar datos de la reserva"
             ></v-text-field>
@@ -84,7 +78,7 @@
                     <v-col cols="12">
                       <v-combobox
                         name="q_adults"
-                        :items=[1,2,3,4,5,6,7]
+                        :items=[1,2,3,4,5,6,7,8,9,10]
                         label="Adultos"
                         clearable
                         dense
@@ -101,7 +95,7 @@
                     <v-col cols="12">
                       <v-combobox
                         name="q_childrens"
-                        :items=[1,2,3,4,5,6]
+                        :items=[1,2,3,4,5,6,7,8,9,10]
                         label="Niños"
                         clearable
                         dense
